# functionGraphicWeb

./: README.md
backend/: server.py
backend/cpp_files/: CMakeLists.txt
backend/cpp_files/src/: compute.cpp
frontend/: index.html  script.js  style.css
